<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHeight_percent=".6"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/authentication_logo"
    app:layout_constraintWidth_percent=".7">

    <EditText
        android:id="@+id/signup_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_email_or_username"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />


    <EditText
        android:id="@+id/signup_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_edit_text"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/signup_password_confirmation_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_password_edit_text"
        app:layout_constraintWidth_percent=".8" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/pink_rectangle"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_edit_text"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/signup_twitter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_button" />

    <ImageView
        android:id="@+id/signup_facebook"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:background="@drawable/facebook_button"
        android:padding="10dp"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/signup_twitter"
        app:layout_constraintTop_toBottomOf="@id/or" />

    <ImageView
        android:id="@+id/signup_twitter"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:background="@drawable/facebook_button"
        android:padding="10dp"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/signup_facebook"
        app:layout_constraintRight_toLeftOf="@id/signup_google"
        app:layout_constraintTop_toBottomOf="@id/or" />

    <ImageView
        android:id="@+id/signup_google"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:background="@drawable/facebook_button"
        android:padding="10dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/signup_twitter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or" />

</androidx.constraintlayout.widget.ConstraintLayout>