<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_grey">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:paddingBottom="30dp"
                tools:context=".MainActivity">

                <include layout="@layout/toolbar" />

                <TextView
                    android:id="@+id/chose_food1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/chose_food"
                    android:textColor="@color/text_dark"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

                <TextView
                    android:id="@+id/chose_food2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/you_love"
                    android:textColor="@color/text_dark"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chose_food1" />

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/search_bar_background"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/search_for_a_food_item"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chose_food2"
                    app:layout_constraintWidth_percent=".9" />

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/categories"
                    android:textColor="@color/text_dark"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_bar" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    app:layout_constraintTop_toBottomOf="@id/categories" />

                <TextView
                    android:id="@+id/selected_category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="burger"
                    android:textColor="@color/text_dark"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categories_recycler_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_menu_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintTop_toBottomOf="@id/selected_category_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/shopping_bag"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            app:backgroundTint="@color/pink"
            app:icon="@drawable/shopping_bag"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />

    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>