<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_grey"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:src="@drawable/profile_background"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:alpha=".72"
            android:background="@color/pink"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="27dp"
            android:layout_height="20dp"
            android:layout_margin="12dp"
            android:background="@drawable/back_button"
            app:backgroundTint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture"
            android:layout_width="131dp"
            android:layout_height="131dp"
            android:layout_marginTop="152dp"
            android:elevation="10dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/burger_zinger"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_picture"
            style="?attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:icon="@drawable/edit"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/profile_picture"
            app:layout_constraintLeft_toRightOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="@id/profile_picture" />


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="37dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/email"
            android:textColor="@color/pink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_picture" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_email"
            style="?attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:backgroundTint="@color/background_grey"
            app:icon="@drawable/edit"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/email"
            app:layout_constraintLeft_toRightOf="@id/email"
            app:layout_constraintTop_toTopOf="@id/email" />

        <EditText
            android:id="@+id/profile_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/border_grey"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:text="email@email.com"
            android:textColor="@color/profile_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintWidth_percent=".86" />

        <TextView
            android:id="@+id/verify_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/verify_email"
            android:textColor="#ff0000"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/profile_email_edit_text" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="37dp"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/password"
            android:textColor="@color/pink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_email_edit_text" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_password"
            style="?attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:backgroundTint="@color/background_grey"
            app:icon="@drawable/edit"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/password"
            app:layout_constraintLeft_toRightOf="@id/password"
            app:layout_constraintTop_toTopOf="@id/password" />

        <EditText
            android:id="@+id/profile_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/border_grey"
            android:enabled="false"
            android:inputType="textPassword"
            android:text="**************"
            android:textColor="@color/profile_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintWidth_percent=".86" />


        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="37dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/phone_number"
            android:textColor="@color/pink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_password_edit_text" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_phone"
            style="?attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:backgroundTint="@color/background_grey"
            app:icon="@drawable/edit"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/phone"
            app:layout_constraintLeft_toRightOf="@id/phone"
            app:layout_constraintTop_toTopOf="@id/phone" />

        <EditText
            android:id="@+id/profile_phone_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/border_grey"
            android:enabled="false"
            android:inputType="phone"
            android:text="+213 00 000 00"
            android:textColor="@color/profile_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone"
            app:layout_constraintWidth_percent=".86" />


        <TextView
            android:id="@+id/userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="37dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/user_id"
            android:textColor="@color/pink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_phone_edit_text" />


        <EditText
            android:id="@+id/profile_ID_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/border_grey"
            android:enabled="false"
            android:text="22000"
            android:textColor="@color/profile_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userID"
            app:layout_constraintWidth_percent=".86" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>